# droa

./: .gitignore  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_DIAGRAM.md  CI_CD_GUIDE.md  Jenkinsfile  WHITEPAPER.md  main.py  pyproject.toml  requirements.txt  test_ast.py
prompts/: cartographer_concepts.jinja2  cartographer_flows.jinja2  cartographer_org.jinja2  cartographer_relationships.jinja2  module_documenter.jinja2  module_documenter_javascript.jinja2  module_documenter_python.jinja2  reviewer.jinja2  synthesizer_components.jinja2  synthesizer_lessons.jinja2  synthesizer_models.jinja2
src/deep_rkb_agent/: __init__.py  conductor.py  db.py  llm_utils.py  logger.py  schemas.py
src/deep_rkb_agent/agents/: cartographer.py  graph_exporter.py  memory_updater.py  module_documenter.py  reciprocity.py  reviewer.py  synthesizer.py  validator.py
src/deep_rkb_agent/tools/: ast_parser.py  file_reader.py  import_graph.py  scanner.py
tests/: test_cartographer_tools.py  test_graph_exporter.py  test_kill_restart.py  test_synthesizer.py  test_validator.py
tests/fixtures/sample_repo/: Main.java  main.go  main.py  utils.py
